@@ -1,3 +1,7 @@
+2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* util/recon_scripts/snmpdevices.pl: Fixed some problems with the script.
+
 2011-09-12  Sancho Lerena <slerena@artica.es>
 
 	* DEBIAN/control: Updated version to 4.0 (final).
